--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,6 +31,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Prepare UI folder
+        run: |
+          cp ui/app.html ui/index.html
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
